[tool.poetry]
name = "ugent-food"
version = "0.2.0"
description = "Command-line tool to get the current menu for Ghent University restaurants"
authors = ["stijndcl"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
click = "^8.1.3"
dacite = "^1.6.0"
tabulate = "^0.8.10"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "4.0.1"
flake8-bugbear = "^22.8.23"
flake8-docstrings = "^1.6.0"
flake8-dunder-all = "^0.2.2"
flake8-eradicate = "^1.3.0"
flake8-isort = "^4.2.0"
flake8-simplify = "^0.19.3"
mypy = "^0.971"
pre-commit = "^2.20.0"
types-tabulate = "^0.8.11"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=62", "wheel"]
build-backend = "poetry.core.masonry.api"
